feat: add sensors post endpoint
