# internal/handlers/sensors.go
@@ -14,15 +14,27 @@ func NewSensors() *Sensors {
 	return &Sensors{}
 }
 
-// (GET /ping)
+// (GET /v1/sensors)
 func (s *Sensors) GetV1Sensors(ctx context.Context, request api.GetV1SensorsRequestObject) (api.GetV1SensorsResponseObject, error) {
 	resp := api.GetV1Sensors200JSONResponse{
-		SensorsResponseJSONResponse: api.SensorsResponseJSONResponse{
-			Sensors: []api.Sensor{
+		SensorsDataResponseJSONResponse: api.SensorsDataResponseJSONResponse{
+			Sensors: []api.SensorData{
 				{},
 			},
 		},
 	}
 
 	return resp, nil
+}
+
+// (POST /v1/sensors)
+func (s *Sensors) PostV1Sensors(ctx context.Context, request api.PostV1SensorsRequestObject) (api.PostV1SensorsResponseObject, error) {
+	return api.PostV1Sensors200JSONResponse{
+		SensorResponseJSONResponse: api.SensorResponseJSONResponse{
+			Id:   request.Body.UserId,
+			Mac:  request.Body.Mac,
+			Name: request.Body.Name,
+			Type: request.Body.Type,
+		},
+	}, nil
 }
